--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -38,18 +38,38 @@
 <div class="container-fluid">
     {% if grade > 80 %}
     <div class="alert alert-success">
-       <!--HINT Display passed info -->
+       <h2><b>Congratulations, {{user.username}}!</b> You have passed the exam and completed the course with score {{grade}}/100</h2>
     </div>
-        {% else %}
-        <div class="alert alert-danger">
-            <!--HINT Display failed info -->
-        </div>
-        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
-        <div class="card-columns-vertical mt-1">
-        <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
-        </div>
+    {% else %}
+    <div class="alert alert-danger">
+        <h2><b>Failed</b> Sorry, {{user.username}}! You have failed exam with score {{grade}}/100</h2>
     </div>
+    <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
+    {% endif %}
+    <div class="card-columns-vertical mt-1">
+    <h5 class="">Exam results</h5>
+        <!--HINT Display exam results-->
+        {% for question in course.question_set.all %}
+        <div class="card mt-1">
+            <div class="card-header"><h5>{{ question.text }}</h5></div>
+            <div class="form-group">
+                {% for choice in question.choice_set.all %}
+                <div class="form-check">
+                    {% if choice.is_correct and choice in choices %}
+                    <div class="text-success">Correct answer: {{ choice.text }}</div>
+                    {% else %}{% if choice.is_correct and not choice in choices %}
+                    <div class="text-warning">Not selected: {{ choice.text }}</div>
+                    {% else %}{% if not choice.is_correct and choice in choices %}
+                    <div class="text-danger">Wrong answer: {{ choice.text }}</div>
+                    {% else %}
+                    <div>{{ choice.text }}</div>
+                    {% endif %}{% endif %}{% endif %}
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 </body>
 </html>
