--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -28,7 +28,7 @@
                         {% csrf_token %}
                         <div class="input-group">
                             <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Username" name="psw" >
+                            <input type="password" class="form-control" placeholder="Password" name="psw" >
                             <button class="btn btn-primary" type="submit">Login</button>
                             <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
                         </div>
@@ -50,16 +50,16 @@
                     </div>
                 {% endfor %}
             </div>
+            {% if user.is_authenticated %}
             <br>
             <button class="btn btn-primary btn-block" data-toggle="collapse" data-target="#exam">Start Exam</button>
             <br>
             <div id="exam" class="collapse">
-                {% if user.is_authenticated %}
-                <form id="questionform" action="submit/" method="post">
+                <form id="questionform" action="{% url 'onlinecourse:submit' course.id %}" method="post">
                     {% for lesson in course.lesson_set.all %}
                     {% for question in lesson.question_set.all %}
                     <div class="card mt-1">
-                        <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                        <div class="card-header"><h5>{{ question.text}}</h5></div>
                         {% csrf_token %}
                         <div class="form-group">
                             {% for choice in question.choice_set.all %}
@@ -67,7 +67,7 @@
                                 <label class="form-check-label">
                                     <input type="checkbox" name="choice_{{choice.id}}"
                                            class="form-check-input" id="{{choice.id}}"
-                                           value="{{choice.id}}">{{ choice.choice_text }}
+                                           value="{{choice.id}}">{{ choice.text }}
                                 </label>
                             </div>
                             {% endfor %}
